--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "ts-node-dev --respawn src/server.ts",
     "test": "jest",
-    "migrate": "ts-node src/migrateJson.ts"
+    "migrate": "ts-node src/migrateJson.ts",
+    "lint": "eslint"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -18,12 +19,18 @@
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.35",
     "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "eslint": "^8.0.1",
+    "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
     "jest": "^28.1.0",
     "mocha-junit-reporter": "^2.0.2",
     "supertest": "^6.2.3",
     "ts-jest": "^28.0.2",
     "ts-node": "^10.8.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.7.2"
+    "typescript": "*"
   }
 }
